Changes for 1.2.7
* Redid canBeGivenByTerritoryTo unit attachment to be a colon delimited list of players, who are the players this unit can be given to. Also added a missing toString. (veqryn)

* Completely redid giveUnitControl to be flexible. giveUnitControl and changeUnitOwners are now lists of players to give to, and a new unit attachment, canBeGivenByTerritory, and a new global property, "Give Units By Territory".  
  takeUnitControl is deleted since no longer needed. This will break compatibility with 2 maps, but I have already updated them, so users just have to update their maps after the next version comes out. (veqryn, with some inspiration from rolflarsson)

* New game property, "Triggered Victory", and new trigger option, "victory" value = victory message. Can be based on any condition. (veqryn)

* Dynamix AI patch, various small improvements and logic fixes. (wisconsin)

* New game property, "Low Luck for Technology", which will apply low luck rules to rolling for tech. (veqryn)

* Dynamix AI logging patch, should make logs easier to read. (wisconsin)

* Completely re-wrote NoPuDelegate, and re-wrote the Rules Attachment for productionPerXTerritories. Now looks like: <option name="productionPerXTerritories" value="infantry" count="2"/>, and you can have multiple instances of this. (veqryn)

* Small bug fix for Support attachments (squiddaddy), and a bug fix for the new placement logic. (veqryn)

* Dynamix AI patch, adding more features and improving some logic. (wisconsin)

* New Repair options. New unit attachment: <option name="repairsUnits" value="battleship:bunker"/> will cause the attached unit to repair units in the list. New game properties: "Battleships repair at beginning of round" and "Two HitPoint Units Require Repair Facilities". (veqryn)
